# introspect

./: .gitignore  .tool-versions  Cargo.toml  DESIGN.md  Scarb.toml  lib.cairo  snip.md
crates/cairo-syntax-parser/: Cargo.toml
crates/cairo-syntax-parser/src/: ast.rs  attribute.rs  common.rs  crate_macros.rs  expr.rs  generic_param.rs  item.rs  lib.rs  macros.rs  reader.rs  statement.rs
crates/cairo-syntax-parser/src/fmt/: attribute.rs  common.rs  expr.rs  fmt.rs  generic_param.rs  item.rs  macros.rs  mod.rs  statement.rs  write.rs
crates/events/: Cargo.toml
crates/events/src/: event.rs  lib.rs  types.rs  value.rs
crates/events/src/database/: deserialize.rs  events.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: lib.rs
crates/type_library/: Cargo.toml
crates/type_library/src/: lib.rs
crates/type_parsing/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: attribute.rs  bytes.rs  decode_error.rs  deserialize.rs  deserialize_def.rs  deserialize_error.rs  event.rs  felt.rs  felt_to.rs  iserde.rs  iserde_types.rs  json.rs  lib.rs  parsed.rs  parser.rs  reference.rs  schema.rs  serde.rs  serialize.rs  serialize_def copy.rs  serialize_def.rs  transcode.rs  transcode_def copy 2.rs  transcode_def.rs  ty.rs  type_def.rs  types.rs  utils.rs  value.rs
crates/value/: Cargo.toml
crates/value/src/: json.rs  lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  basic-use.md  chapter_1.md  example-framework.md  introduction.md
docs/src/events/: database_events.md  type_events.md  variable_events.md
docs/src/introsepct/: attributes.md  traits.md  type_definitions.md
docs/src/useage/: defining-types.md
examples/framework/: Scarb.toml
examples/framework/src/: example_gen.cairo  exmaple_contract.cairo  lib.cairo  table.cairo
src/: lib.cairo
test/test_contract/: Scarb.toml
test/test_contract/src/: lib.cairo
tests/events/: Scarb.toml
tests/events/src/: lib.cairo
tests/test_contract/: Scarb.toml
tests/test_contract/src/: lib.cairo
