[workspace]
resolver = "2"

members = ["crates/*"]
exclude = ["crates/type_library"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/cartridge-gg/introspect"
version = "0.1.0"

[profile.performance]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"

[profile.profiling]
debug = true
inherits = "release"

[workspace.dependencies]
starknet-types-core = "0.2.0"
num-traits = { version = "0.2", default-features = false }
serde = "1.0.228"
starknet = "0.17.0"
starknet-crypto = "0.8"
cainome-cairo-serde = "0.4.0"
