[workspace]
resolver = "2"

members = [
    "crates/types",
    "crates/events",
    "crates/macros",
    "packages/macros",
    "packages/table_macros",
]
exclude = ["crates/type_library"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/cartridge-gg/introspect"
version = "0.1.2"

[profile.performance]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"

[profile.profiling]
debug = true
inherits = "release"

[workspace.dependencies]
cainome-cairo-serde = "0.4.0"
cairo-lang-macro = "0.2.1"
cairo-lang-parser = "2.15.0"
cairo-lang-starknet-classes = "2.15.0"
cairo-lang-syntax = "2.15.0"
cairo-lang-diagnostics = "2.15.0"
convert_case = "0.8.0"
hex = "0.4.3"
indent = "0.1.1"
lambdaworks-math = "0.13.0"
num-traits = { version = "0.2", default-features = false }
primitive-types = { version = "0.14.0", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.145"
starknet = "0.17.0"
starknet-crypto = "0.8"
starknet-types-core = "0.2.0"
thiserror = "2.0.17"
itertools = "0.14.0"
const_format = "0.2.35"


introspect_macros = { path = "packages/macros" }
introspect_table_macros = { path = "packages/table_macros" }
introspect-events = { path = "crates/events" }
introspect-types = { path = "crates/types" }
introspect-rust-macros = { path = "crates/macros" }
