[package]
edition.workspace = true
name = "cairo-syntax-parser"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.24.0"
cairo-lang-syntax.workspace = true
cairo-lang-macro.workspace = true
cairo-lang-parser.workspace = true
paste = "1.0"
thiserror.workspace = true
delegate.workspace = true

[dev-dependencies]
