[package]
edition.workspace = true
name = "introspect-events"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cainome-cairo-serde.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
introspect-types.workspace = true
introspect-value.workspace = true

[dev-dependencies]
