[package]
edition.workspace = true
name = "introspect-types"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cainome-cairo-serde.workspace = true
introspect-value.workspace = true
num-traits.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
primitive-types.workspace = true

[dev-dependencies]
