[package]
edition.workspace = true
name = "introspect-types"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cainome-cairo-serde.workspace = true
convert_case.workspace = true
num-traits.workspace = true
primitive-types.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
lambdaworks-math.workspace = true

[dev-dependencies]
