[package]
edition.workspace = true
name = "introspect-types"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3.workspace = true
convert_case.workspace = true
num-traits.workspace = true
primitive-types.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
lambdaworks-math.workspace = true
hex.workspace = true
thiserror.workspace = true
starknet.workspace = true
introspect-rust-macros.workspace = true


[dev-dependencies]
