[package]
edition.workspace = true
name = "introspect-value"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cainome-cairo-serde.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
convert_case.workspace = true
serde_json.workspace = true
primitive-types.workspace = true

[dev-dependencies]
